--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -1,29 +1,37 @@
 .container {
-width: 60%;
-margin: 0 auto;
-margin-top: 140px;
+  width: 60%;
+  margin: 0 auto;
+  margin-top: 140px;
 }
 
-.contact {
-
+.address {
+  font-size: 28px;
+  margin-bottom: 5px;
+  margin-bottom: 40px;
 }
 
-.contact h3{
-    font-size: 30px;
-    margin-bottom: 5px;
+.address p {
+  margin-left: 10px;
+  font-size: 20px;
+  margin-top: 5px;
+}
+
+.contact h3 {
+  font-size: 30px;
+  margin-bottom: 5px;
 }
 
 .contact a {
-    margin-left: 10px;
-    margin-bottom: 5px;
-    font-size: 18px;
-    text-decoration: underline;
-    color: black;
-    display: flex;
+  margin-left: 10px;
+  margin-bottom: 5px;
+  font-size: 18px;
+  text-decoration: underline;
+  color: black;
+  display: flex;
 }
 
 .contact .meet {
-    margin-top: 20px;
-    color: red;
-    font-size: 20px;
+  margin-top: 20px;
+  color: red;
+  font-size: 20px;
 }
