--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -1,16 +1,17 @@
 .container {
   width: 60%;
   margin: 0 auto;
+  display: flex;
   margin-top: 140px;
 }
 
-.address {
+.address, .mail {
   font-size: 28px;
   margin-bottom: 5px;
   margin-bottom: 40px;
 }
 
-.address p {
+.address p, .mail {
   margin-left: 10px;
   font-size: 20px;
   margin-top: 5px;
@@ -34,4 +35,9 @@
   margin-top: 20px;
   color: red;
   font-size: 20px;
+}
+
+
+.map {
+  margin-left: 40px;
 }
