--- a/src/styles/Contact.module.scss
+++ b/src/styles/Contact.module.scss
@@ -11,7 +11,7 @@
   margin-bottom: 40px;
 }
 
-.address p, .mail {
+.address p, .mail p{
   margin-left: 10px;
   font-size: 20px;
   margin-top: 5px;
